--- a/Projects/STM32MP15-phyBOARD-Sargas/Applications/OpenAMP/OpenAMP_TTY_echo/STM32CubeIDE/CM4/.project
+++ b/Projects/STM32MP15-phyBOARD-Sargas/Applications/OpenAMP/OpenAMP_TTY_echo/STM32CubeIDE/CM4/.project
@@ -37,14 +37,14 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/readme.txt</locationURI>
 		</link>
 		<link>
-			<name>Application/User/lock_resource.c</name>
-			<type>1</type>
-			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/Src/lock_resource.c</locationURI>
-		</link>
-		<link>
 			<name>Application/Startup/startup_stm32mp157cacx.s</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-0-PROJECT_LOC%7D/Application/Startup/startup_stm32mp157caax.s</locationURI>
+		</link>
+		<link>
+			<name>Application/User/lock_resource.c</name>
+			<type>1</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/Src/lock_resource.c</locationURI>
 		</link>
 		<link>
 			<name>Application/User/main.c</name>
@@ -155,6 +155,16 @@
 			<name>Drivers/STM32MP1xx_HAL_Driver/stm32mp1xx_hal_rcc_ex.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/STM32MP1xx_HAL_Driver/Src/stm32mp1xx_hal_rcc_ex.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32MP1xx_HAL_Driver/stm32mp1xx_hal_uart.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32MP1xx_HAL_Driver/Src/stm32mp1xx_hal_uart.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32MP1xx_HAL_Driver/stm32mp1xx_hal_uart_ex.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32MP1xx_HAL_Driver/Src/stm32mp1xx_hal_uart_ex.c</locationURI>
 		</link>
 		<link>
 			<name>Middlewares/OpenAMP/libmetal/device.c</name>
