--- a/Projects/STM32MP15-phyBOARD-Sargas/Applications/OpenAMP/OpenAMP_TTY_echo/STM32CubeIDE/CM4/.project
+++ b/Projects/STM32MP15-phyBOARD-Sargas/Applications/OpenAMP/OpenAMP_TTY_echo/STM32CubeIDE/CM4/.project
@@ -42,6 +42,26 @@
 			<locationURI>$%7BPARENT-0-PROJECT_LOC%7D/Application/Startup/startup_stm32mp157caax.s</locationURI>
 		</link>
 		<link>
+			<name>Application/User/fdcan.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Src/fdcan.c</locationURI>
+		</link>
+		<link>
+			<name>Application/User/fdcanutil.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Src/fdcanutil.c</locationURI>
+		</link>
+		<link>
+			<name>Application/User/gpio.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Src/gpio.c</locationURI>
+		</link>
+		<link>
+			<name>Application/User/ipcc.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Src/ipcc.c</locationURI>
+		</link>
+		<link>
 			<name>Application/User/lock_resource.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/Src/lock_resource.c</locationURI>
@@ -80,6 +100,11 @@
 			<name>Application/User/stm32mp1xx_it.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/Src/stm32mp1xx_it.c</locationURI>
+		</link>
+		<link>
+			<name>Application/User/usart.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Src/usart.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/BSP/stm32mp15xx_phyboard-sargas.c</name>
