--- a/STM32MP1/Projects/STM32MP15-phyBOARD-Sargas/Applications/OpenAMP/OpenAMP_TTY_echo/STM32CubeIDE/CM4/.project
+++ b/STM32MP1/Projects/STM32MP15-phyBOARD-Sargas/Applications/OpenAMP/OpenAMP_TTY_echo/STM32CubeIDE/CM4/.project
@@ -187,6 +187,11 @@
 			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/STM32MP1xx_HAL_Driver/Src/stm32mp1xx_hal_rcc_ex.c</locationURI>
 		</link>
 		<link>
+			<name>Drivers/STM32MP1xx_HAL_Driver/stm32mp1xx_hal_uart.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32MP1xx_HAL_Driver/Src/stm32mp1xx_hal_uart.c</locationURI>
+		</link>
+		<link>
 			<name>Drivers/STM32MP1xx_HAL_Driver/stm32mp1xx_hal_uart_ex.c</name>
 			<type>1</type>
 			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32MP1xx_HAL_Driver/Src/stm32mp1xx_hal_uart_ex.c</locationURI>
